--- a/intro-page.html
+++ b/intro-page.html
@@ -17,7 +17,7 @@
                     <a href="intro-page.html"><p class="about">about</p></a>
                 </div>
                 <div class="questions">
-                    <p class="myStory meta"><span class="myStory-span">Hi, my name is OnYou and yes, it's my real name. </span></p>
+                    <p class="myStory meta"><span class="myStory-span">Hi, my name is OnYou and yes, it's my real name. </span></p><br>
                     <p class="myStory meta">OnYou in Korean means warm and soft, and it also has biblical context as 'OnYou' is an adjective that is only used in the Bible in Korea. So growing up, I always took pride in my name and since it is a very unique name in Korean as well, I got a compliment on my name pretty often.</p>
                     <p class="myStory meta">But unfortunately, that was not the case when I started going to high school in Minnesota. High school kids being high school kids, they made a joke out of my name saying things such as "oh she's on you."</p>
                     <p class="myStory meta">I was in a new country, a new school, using a new language. People making jokes out of my name instantly made me even more frustrated than I already was. So I decided to discuss it with my advisor, who brought me to talk to Mr. Simons, the Assistant Director of Student Life. We went to his office to discuss it and he says "You should get an English name."</p>
