--- a/kuu.html
+++ b/kuu.html
@@ -31,7 +31,8 @@
                     <p class="meta one">Connie Chen</p>
                     <p class="meta two">Kuu Chen</p>
                 </div>
-                
+                <img class="downs" id="down" src="images/scroll-down.gif"> 
+                <img class="downs" id="down2" src="images/scroll-down.gif"> 
             </div>
             <div class="page">
                 <div class="content">
