--- a/matt.html
+++ b/matt.html
@@ -32,6 +32,8 @@
                     <p class="meta two">Matt Janney</p>
                     <p class="meta three">Matty</p>
                 </div>
+                <img class="downs" id="down" src="images/scroll-down.gif"> 
+                <img class="downs" id="down2" src="images/scroll-down.gif"> 
             </div>
             <div class="page">
                 <div class="content">
