--- a/russell.html
+++ b/russell.html
@@ -32,6 +32,8 @@
                     <p class="meta two">Russell Beckham</p>
                     <p class="meta-2 three">sometimes my mother calls me by brother's name. His name is Randall and because they both start with R she gets confused</p>
                 </div>
+                <img class="downs" id="down" src="images/scroll-down.gif"> 
+                <img class="downs" id="down2" src="images/scroll-down.gif"> 
             </div>
             <div class="page">
                 <div class="content">
