--- a/soa.html
+++ b/soa.html
@@ -10,7 +10,7 @@
         <link href="css/soa.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <audio id="my_audio" src="audio/soa.mp3"></audio>
+        <audio id="my_audio" src="audio/soa.amr"></audio>
         <div class="docScroller">
             <div class="page">
                 <div class="header">
@@ -31,7 +31,8 @@
                     <p class="meta one">So A Ryu</p>
                     <p class="meta two">So A Ryu</p>
                 </div>
-                
+                <img class="downs" id="down" src="images/scroll-down.gif"> 
+                <img class="downs" id="down2" src="images/scroll-down.gif"> 
             </div>
             <div class="page">
                 <div class="content">
