--- a/alex.html
+++ b/alex.html
@@ -31,7 +31,8 @@
                     <p class="meta one">Alexander Quyen Ngo</p>
                     <p class="meta two">Alex Ngo</p>
                 </div>
-                
+                <img class="downs" id="down" src="images/scroll-down.gif"> 
+                <img class="downs" id="down2" src="images/scroll-down.gif"> 
             </div>
             <div class="page">
                 <div class="content">
