--- a/ayanna.html
+++ b/ayanna.html
@@ -31,7 +31,8 @@
                     <p class="meta one">Ayanna Denise Harrison</p>
                     <p class="meta two">Ayanna Harrison</p>
                 </div>
-                
+                <img class="downs" id="down" src="images/scroll-down.gif"> 
+                <img class="downs" id="down2" src="images/scroll-down.gif"> 
             </div>
             <div class="page">
                 <div class="content">
