--- a/bersabeh.html
+++ b/bersabeh.html
@@ -33,7 +33,8 @@
                     <p class="meta two">Bersabeh Zenebe</p>
                     <p class="meta three">Bersi</p>
                 </div>
-                
+                <img class="downs" id="down" src="images/scroll-down.gif"> 
+                <img class="downs" id="down2" src="images/scroll-down.gif"> 
             </div>
             <div class="page">
                 <div class="content">
