--- a/harriet.html
+++ b/harriet.html
@@ -31,7 +31,8 @@
                     <p class="meta one">Hyun Joo Cho</p>
                     <p class="meta two">Harriet Cho</p>
                 </div>
-                
+                <img class="downs" id="down" src="images/scroll-down.gif"> 
+                <img class="downs" id="down2" src="images/scroll-down.gif"> 
             </div>
             <div class="page">
                 <div class="content">
