--- a/maddy.html
+++ b/maddy.html
@@ -31,7 +31,8 @@
                     <p class="meta one">Madeline Barbara Mueller</p>
                     <p class="meta two">Maddy Mueller</p>
                 </div>
-                
+                <img class="downs" id="down" src="images/scroll-down.gif"> 
+                <img class="downs" id="down2" src="images/scroll-down.gif"> 
             </div>
             <div class="page">
                 <div class="content">
