--- a/maggie.html
+++ b/maggie.html
@@ -32,7 +32,8 @@
                     <p class="meta two">Maggie</p>
                     <p class="meta three">Chuang</p>
                 </div>
-                
+                <img class="downs" id="down" src="images/scroll-down.gif"> 
+                <img class="downs" id="down2" src="images/scroll-down.gif"> 
             </div>
             <div class="page">
                 <div class="content">
