--- a/mars.html
+++ b/mars.html
@@ -32,6 +32,8 @@
                     <p class="meta two">Mars Kim</p>
                     <p class="meta three">Yunjoo—it is my Korean name</p>
                 </div>
+                <img class="downs" id="down" src="images/scroll-down.gif"> 
+                <img class="downs" id="down2" src="images/scroll-down.gif"> 
             </div>
             <div class="page">
                 <div class="content">
