--- a/nick.html
+++ b/nick.html
@@ -32,7 +32,8 @@
                     <!-- <p class="meta two"></p> -->
                     <p class="meta three">Nick Rogers</p>
                 </div>
-                
+                <img class="downs" id="down" src="images/scroll-down.gif"> 
+                <img class="downs" id="down2" src="images/scroll-down.gif"> 
             </div>
             <div class="page">
                 <div class="content">
