--- a/onyou.html
+++ b/onyou.html
@@ -33,7 +33,8 @@
                     <p class="meta two">OnYou Kang</p>
                     <p class="meta three">Wenrou</p>
                 </div>
-                
+                <img class="downs" id="down" src="images/scroll-down.gif"> 
+                <img class="downs" id="down2" src="images/scroll-down.gif"> 
             </div>
             <div class="page">
                 <div class="content">
@@ -94,6 +95,8 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 
         <script src="js/javascript.js"></script>
+        <script src="js/fullpage.js"></script>
+
 
     </body>
 </html>
