--- a/rita.html
+++ b/rita.html
@@ -10,7 +10,7 @@
         <link href="css/rita.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <audio id="my_audio" src="audio/rita.mp3"></audio>
+        <audio id="my_audio" src="audio/rita.amr"></audio>
         <div class="docScroller">
             <div class="page">
                 <div class="header">
@@ -32,6 +32,8 @@
                     <p class="meta zero">Rita Verma</p>
                     <p class="meta three">Reets</p>
                 </div>
+                <img class="downs" id="down" src="images/scroll-down.gif"> 
+                <img class="downs" id="down2" src="images/scroll-down.gif"> 
             </div>
             <div class="page">
                 <div class="content">
