--- a/sherry.html
+++ b/sherry.html
@@ -33,6 +33,8 @@
                     <p class="meta two">Holmes</p>
                     <p class="meta three">Kyee</p>
                 </div>
+                <img class="downs" id="down" src="images/scroll-down.gif"> 
+                <img class="downs" id="down2" src="images/scroll-down.gif"> 
             </div>
             <div class="page">
                 <div class="content">
