--- a/tony.html
+++ b/tony.html
@@ -32,6 +32,8 @@
                     <p class="meta two">Tony Huerta-Apanco</p>
                     <p class="meta three">Antonio, Mijo, or Chamaco</p>
                 </div>
+                <img class="downs" id="down" src="images/scroll-down.gif"> 
+                <img class="downs" id="down2" src="images/scroll-down.gif"> 
             </div>
             <div class="page">
                 <div class="content">
